ready base build

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,7 +14,7 @@ https://operatino.github.io/MCSS/modules/shorthand_dictionary.html
 //-@import "../../node_modules/normalize.css/normalize.css";
 
 // HELPERS + MIXINS
-
+@import "media-queries";
 
 @import "helpers/functions";
 @import "helpers/helpers";
