--- a/src/template/helpers/mixins.pug
+++ b/src/template/helpers/mixins.pug
@@ -23,24 +23,24 @@ mixin GA (GA_ID)
 	//-  End Google Analytics
 
 mixin FavIcon
-	| <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-	| <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-touch-icon-57x57.png">
-	| <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-touch-icon-60x60.png">
-	| <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-touch-icon-72x72.png">
-	| <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-touch-icon-76x76.png">
-	| <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-touch-icon-114x114.png">
-	| <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-touch-icon-120x120.png">
-	| <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-touch-icon-144x144.png">
-	| <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-touch-icon-152x152.png">
-	| <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-chrome-192x192.png">
-	| <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-	| <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png">
-	| <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-	| <link rel="manifest" href="/assets/img/favicon/manifest.json">
+	| <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+	| <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
+	| <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon-60x60.png">
+	| <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
+	| <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon-76x76.png">
+	| <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+	| <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon-120x120.png">
+	| <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon-144x144.png">
+	| <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png">
+	| <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+	| <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	| <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+	| <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	| <link rel="manifest" href="img/favicon/manifest.json">
 	meta(name="msapplication-TileColor", content="#ffffff")
-	meta(name="msapplication-TileImage", content="/assets/img/favicon/mstile-144x144.png")
+	meta(name="msapplication-TileImage", content="img/favicon/mstile-144x144.png")
 	meta(name="theme-color", content="#ffffff")
-	meta(name="msapplication-config", content="/assets/img/favicon/browserconfig.xml")
+	meta(name="msapplication-config", content="img/favicon/browserconfig.xml")
 
 //- svg
 mixin use(name, sname)
